--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     ]
   },
   "dependencies": {
+    "gsap": "npm:@gsap/member",
     "next": "10.2.2",
     "next-pwa": "^5.2.21",
     "react": "17.0.2",
@@ -36,6 +37,7 @@
     "@storybook/react": "^6.2.9",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
+    "@types/gsap": "^3.0.0",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.0",
     "@types/react": "^17.0.5",
