--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-//npm.greensock.com/:_authToken=f28dc62b-5826-47f2-9fa2-65775691125d
+//npm.greensock.com/:_authToken="TOKEN Greensock"
 @gsap:registry=https://npm.greensock.com
